# musicmotion

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: README.md
scripts/: audio_demo.py  image_demo.py  retro_ui_demo.py  title_screen.py  webcam_demo.py
src/musicmotion_hand/: __init__.py  audio.py  detector.py  drawing.py  model_assets.py  types.py  utils.py
