[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicmotion-hand"
version = "0.1.0"
description = "Hand position detector (MediaPipe Hands + OpenCV)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "mediapipe>=0.10.30,<0.11",
  "opencv-python>=4.10,<5",
  "numpy>=1.26,<3",
  "certifi>=2024.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


